# mazatrol-reader-aero

./: CHANGELOG.md  LICENSE  README.md  how to run.txt  m6m_structure.xlsx  main.py  mazatrol extensions.txt  mazatrol-reader-aero_publish.bat  mazatrol-reader-aero_restart.bat  mazatrol-reader-aero_run.bat  pbd_structure.xlsx  pbf_structure.xlsx  pbf_structure.xml  pyproject.toml  requirements.txt
MazatrolWeb/: ARCHITECTURE.md  MazatrolWeb.slnx  README.md
SAMPLE_NC_PROGRAM/: 001-Pocket-Mill-Matrix.html  001-Pocket-Mill-Matrix.pbf  002-XC-Pocket-Mill-Sample-HD1-Matrix_ori.html  003-XC-Pocket-Mill-Sample-HD2-Matrix.pbf  003-XC-Pocket-Mill-Sample-HD2-Matrix_improved.html  003-XC-Pocket-Mill-Sample-HD2-Matrix_ori.html  004-XC-Pocket-Mill-Sample-Hd1andHead2-Matrix_ori.html  1040301.m6p  18062300.PBF  18203300.MAZ  18203303.MAZ  18205300.PBD  18205303.PBD  18205304.PBD  18206301.PBD  18206302.PBD  18206303.PBD  18209302.PBD  18209303.PBD  18226200.PBF  18227200.PBF  18298200.PBE  18298300.PBE  18298400.PBE  19011400.M6M  19011401.M6M  19011403.M6M  19011405.M6M  19011406.M6M  19011408.M6M  19011412.EIA  19011413.M6M  19011415.M6M  19011416.M6M  21043298.m6p  21043299.m6p  7005200.t6m  7005300.t6m  7005400.t6m
mazatrol_reader/: __init__.py  __main__.py  config.py  editor.py  gui.py  html_parser.py  m6m_binary.py  models.py  parameter_formatter.py  parser.py  visualization.py
programs/: .gitkeep
tests/: test_parser.py
tools/: analyze_pbf_html.py  build_m6m_structure.py  build_pbd_structure.py  build_pbf_structure.py  pbf_analysis.txt
units/: .gitkeep
(+122 files in other folders)
