[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazatrol-reader"
version = "2.0.0"
description = "View, edit, and simulate Mazatrol programs for Mazak CNC lathes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mazatrol Reader contributors" }]
keywords = ["cnc", "mazak", "mazatrol", "opencascade", "wxpython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "wxPython>=4.2.2",
]

[project.optional-dependencies]
occ = [
    # Install via conda-forge on Windows for best results:
    #   conda install -c conda-forge pythonocc-core=7.8.1
    "pythonocc-core>=7.8.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mazatrol-reader = "mazatrol_reader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mazatrol_reader"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
